# trip-planner

./: .gitignore  README.md  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 4076b310333a_initial.py
backend/app/: config.py  database.py  main.py  utils.py
backend/app/crud/: __init__.py  accommodations.py  activities.py  base.py  expenses.py  flights.py  itinerary.py  packing.py  transports.py  travel_info.py  trips.py  weather.py
backend/app/models/: __init__.py  accommodation.py  activity.py  base.py  expense.py  flight.py  itinerary_item.py  packing_item.py  transport.py  travel_info.py  trip.py  weather_info.py
backend/app/routers/: __init__.py  accommodations.py  activities.py  expenses.py  flights.py  itinerary.py  packing.py  transports.py  travel_info.py  trips.py  weather.py
backend/app/schemas/: __init__.py  accommodation.py  activity.py  expense.py  flight.py  itinerary_item.py  packing_item.py  transport.py  travel_info.py  trip.py  weather_info.py
backend/tests/: conftest.py  test_accommodations.py  test_activities.py  test_cascade_delete.py  test_expenses.py  test_flights.py  test_itinerary.py  test_packing.py  test_travel_info.py  test_trips.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useAccommodations.ts  useActivities.ts  useExpenses.ts  useFlights.ts  useItinerary.ts  usePacking.ts  useTransports.ts  (+3 more)
mcp/: pyproject.toml
mcp/server/: client.py  config.py  main.py
mcp/server/tools/: read_tools.py  write_tools.py
(+39 files in other folders)
