[project]
name = "trip-planner-mcp"
version = "0.1.0"
description = "MCP server for AI Trip Planner — Claude Desktop integration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
trip-planner-mcp = "server.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
